...

  @override
  String get appLicenseNotice =>
      'This application is provided to you under the GNU Affero General Public License version 3.0 or higher. If you have not received the license alongside the program, please consult the Moonrelay website for more information.';

  @override
  String get appTitle => 'Moonrelay';

  @override
  String get projectName => 'Moonrelay';

  @override
  String get author => 'Surena Karimpour Ghannadi';
...
  String get unknown => 'Unknown';

  @override
  String get notSet => 'Not set';

  @override
  String get homeserverText => 'Homeserver';

  @override
  String get confirmClose => 'Confirm Exit';

  @override
  String get areYouSureExit => 'Are you sure you want to exit the application?';
...

  @override
  String get signInDescription =>
      'Sign in to your existing account or create a new one.';

  @override
  String get signIn => 'Sign In';

  @override
  String get createAccount => 'Create Account';

  @override
  String get signInWithSso => 'Sign in with Single Sign-On';
...
  String get ssoTitle => 'Single Sign-On';

  @override
  String get tokenLoginTitle => 'Token Login';

  @override
  String get usernameOrEmail => 'Username or email';

  @override
  String get usernameHint => 'Choose a username';

  @override
  String get passwordText => 'Password';

  @override
  String get passwordHint => 'Enter your password';

  @override
  String get ssoUrlLabel => 'SSO Login URL';
...
  }

  @override
  String get chatBoxSendMessage => 'Send a message…';

  @override
  String get chatBoxSend => 'Send';

  @override
  String get chatBoxAttach => 'Attach file';

  @override
  String get chatBoxExpand => 'Expand editor';
...

  @override
  String get couldNotJoinRoomTimeout =>
      'Could not join room: The server did not respond in time.';

  @override
  String get accounts => 'Accounts';

  @override
  String get manageAccounts => 'Manage your connected Matrix accounts';

  @override
  String get myProfile => 'My Profile';
...
      'Display join/leave/room changes in the timeline';

  @override
  String get hub => 'Hub';

  @override
  String get logOut => 'Log Out';

  @override
  String get ownProfileDescriptor => 'Your Profile';

  @override
  String profileLoadError(String error) {
...
